// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withTitleAndDescription should render horizontal 1`] = `
<ComponentWithTitleAndDescription
  description="many posts"
  layout="horizontal"
  refId={
    CannerRefId {
      "_internalArr": Array [
        "posts",
      ],
      "child": [Function],
      "getPathArr": [Function],
      "remove": [Function],
      "toString": [Function],
    }
  }
  title="POSTS"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "margin": "16px 0",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 8,
        }
      }
    >
      <styled.div>
        <div
          className="sc-bdVaJa hWxSEo"
        >
          POSTS
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-bwzfXH iNcgiw"
        >
          many posts
        </div>
      </styled.div>
    </div>
    <div
      style={
        Object {
          "flex": 2,
        }
      }
    >
      <MockComponent
        description="many posts"
        layout="horizontal"
        refId={
          CannerRefId {
            "_internalArr": Array [
              "posts",
            ],
            "child": [Function],
            "getPathArr": [Function],
            "remove": [Function],
            "toString": [Function],
          }
        }
        title="POSTS"
      >
        <div>
          Component
        </div>
      </MockComponent>
    </div>
  </div>
</ComponentWithTitleAndDescription>
`;

exports[`withTitleAndDescription should render horizontal 2`] = `
<ComponentWithTitleAndDescription
  description="many posts"
  layout="horizontal"
  refId={
    CannerRefId {
      "_internalArr": Array [
        "posts",
      ],
      "child": [Function],
      "getPathArr": [Function],
      "remove": [Function],
      "toString": [Function],
    }
  }
  title="POSTS"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "margin": "16px 0",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 8,
        }
      }
    >
      <styled.div>
        <div
          className="sc-bdVaJa hWxSEo"
        >
          POSTS
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-bwzfXH iNcgiw"
        >
          many posts
        </div>
      </styled.div>
    </div>
    <div
      style={
        Object {
          "flex": 2,
        }
      }
    >
      <MockComponent
        description="many posts"
        layout="horizontal"
        refId={
          CannerRefId {
            "_internalArr": Array [
              "posts",
            ],
            "child": [Function],
            "getPathArr": [Function],
            "remove": [Function],
            "toString": [Function],
          }
        }
        title="POSTS"
      >
        <div>
          Component
        </div>
      </MockComponent>
    </div>
  </div>
</ComponentWithTitleAndDescription>
`;

exports[`withTitleAndDescription should render vertical by default 1`] = `
<ComponentWithTitleAndDescription
  description="many posts"
  refId={
    CannerRefId {
      "_internalArr": Array [
        "posts",
      ],
      "child": [Function],
      "getPathArr": [Function],
      "remove": [Function],
      "toString": [Function],
    }
  }
  title="POSTS"
>
  <div
    style={
      Object {
        "margin": "16px 0 0",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <styled.div>
        <div
          className="sc-bdVaJa hWxSEo"
        >
          POSTS
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-htpNat hwpPlb"
        >
          many posts
        </div>
      </styled.div>
    </div>
    <div
      style={
        Object {
          "marginBottom": 8,
        }
      }
    >
      <MockComponent
        description="many posts"
        refId={
          CannerRefId {
            "_internalArr": Array [
              "posts",
            ],
            "child": [Function],
            "getPathArr": [Function],
            "remove": [Function],
            "toString": [Function],
          }
        }
        title="POSTS"
      >
        <div>
          Component
        </div>
      </MockComponent>
    </div>
  </div>
</ComponentWithTitleAndDescription>
`;
